fix: remove container from sections casuing problem on small screens

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -104,7 +104,8 @@ body {
 
 @media (min-width: 1200px) {
 
-  .container {
+  .container,
+  .section {
     max-width: 1280px;
     margin: auto;
   }
